--- a/test-output/old/Custom suite/classes.html
+++ b/test-output/old/Custom suite/classes.html
@@ -4,28 +4,43 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestSuite.TestScriptLogin</td>
+<td>TestSuite.VisualIVRTestSuite</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>SuccessfulLogin</td>
-<td>&nbsp;</td></tr>
+<td>CreateTokenforVerifiedCustomer</td>
+<td>local </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>HappyPathEndtoEndScenario</td>
+<td>test </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>setupTest</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>handleTestMethodName</td>
+<td>test local </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setupTinyurlstub</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
