--- a/test-output/old/Custom suite/methods.html
+++ b/test-output/old/Custom suite/methods.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Custom suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c82f3">  <td>16/08/16 11:21:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScriptLogin.setupTest()[pri:0, instance:TestSuite.TestScriptLogin@3ab39c39]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2088051243</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>16/08/16 11:21:53</td>   <td>528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScriptLogin.SuccessfulLogin(java.lang.String, java.lang.String)[pri:0, instance:TestSuite.TestScriptLogin@3ab39c39]">SuccessfulLogin</td> 
-  <td>main@2088051243</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>16/08/16 11:21:54</td>   <td>2086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScriptLogin.SuccessfulLogin(java.lang.String, java.lang.String)[pri:0, instance:TestSuite.TestScriptLogin@3ab39c39]">SuccessfulLogin</td> 
-  <td>main@2088051243</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/08 16:58:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.setup()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/08 16:58:56</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;handleTestMethodName</td> 
+<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/08 16:58:56</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VisualIVRTestSuite.setupTinyurlstub()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;setupTinyurlstub</td> 
+<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/08 16:58:57</td>   <td>1321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VisualIVRTestSuite.HappyPathEndtoEndScenario(java.lang.String)[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">HappyPathEndtoEndScenario</td> 
+  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/08 16:58:59</td>   <td>3114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VisualIVRTestSuite.tearDown()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/08 16:58:59</td>   <td>3224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;handleTestMethodName</td> 
+<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/08 16:58:59</td>   <td>3224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VisualIVRTestSuite.setupTinyurlstub()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;setupTinyurlstub</td> 
+<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/08 16:58:59</td>   <td>3241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VisualIVRTestSuite.HappyPathEndtoEndScenario(java.lang.String)[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">HappyPathEndtoEndScenario</td> 
+  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/08 16:59:00</td>   <td>3530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VisualIVRTestSuite.tearDown()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/08 16:59:00</td>   <td>3532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestScript.teardown()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
 </table>
