--- a/test-output/old/Custom suite/reporter-output.html
+++ b/test-output/old/Custom suite/reporter-output.html
@@ -1,3 +1,27 @@
-<h2>Reporter output</h2><table><tr><td>{"auth_cookie_code":"64a17c89-9914-4630-98aa-03804560bf1a","legacy_o2at_code":"35cd7d71-dfef-4324-bf32-594479e8e079","legacy_portal_account_cookie_info":{"master_portal_bfid":"130000000272551","master_portal_id":"banky","master_portal_display_name":"richard"},"irrelevant_proof_added":false}</td></tr>
-<tr><td>{"auth_cookie_code":"e8d093c0-77c5-4f1d-97fb-62fbc64359e9","legacy_o2at_code":"798d3200-f611-45b6-a864-7df1c3a5be35","legacy_portal_account_cookie_info":{"master_portal_bfid":"9990000001","master_portal_id":"fun-notverified","master_portal_display_name":"fun-notverified"},"irrelevant_proof_added":false}</td></tr>
+<h2>Reporter output</h2><table><tr><td>REQUEST: </td></tr>
+<tr><td>RESPONSE: </td></tr>
+<tr><td></td></tr>
+<tr><td>{"da_token":"de88ac05-7e1d-469d-9ec6-8e1868eda319"}</td></tr>
+<tr><td>{"transfer_session_id":"fbda5157-46c0-4192-8c48-1d66b0ba8ec6"}</td></tr>
+<tr><td>REQUEST: </td></tr>
+<tr><td>RESPONSE: </td></tr>
+<tr><td>447881222333 -- Hi singlepaymandpayg,
+
+Follow link to sign in to My O2 account.
+https://localhost.o2.co.uk:8443/credhandler/tinyurl/redeem/id1
+
+If you did not authorise this, please contact O2.</td></tr>
+<tr><td>REQUEST: </td></tr>
+<tr><td>RESPONSE: </td></tr>
+<tr><td></td></tr>
+<tr><td>{"da_token":"4d52cd5b-802b-4252-9858-97f8e3e4a569"}</td></tr>
+<tr><td>{"transfer_session_id":"80c86019-131b-446b-9b60-fecd751299ff"}</td></tr>
+<tr><td>REQUEST: </td></tr>
+<tr><td>RESPONSE: </td></tr>
+<tr><td>447992872782 -- Hi singlepaymandpayg,
+
+Follow link to sign in to My O2 account.
+https://localhost.o2.co.uk:8443/credhandler/tinyurl/redeem/id1
+
+If you did not authorise this, please contact O2.</td></tr>
 </table>
