[ns] added asset test suites and few helper functions

--- a/test-output/old/Custom suite/classes.html
+++ b/test-output/old/Custom suite/classes.html
@@ -4,19 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestSuite.VisualIVRTestSuite</td>
+<td>TestSuite.PushNotificationAssetTestSuite</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreateTokenforVerifiedCustomer</td>
-<td>local </td>
-</tr>
+<td>DeletePUSHNOTIFICATIONasset</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>HappyPathEndtoEndScenario</td>
+<td>CreatePUSHNOTIFICATIONasset</td>
 <td>test </td>
 </tr>
 <tr>
@@ -28,19 +27,15 @@
 <tr>
 <td>&nbsp;</td>
 <td>handleTestMethodName</td>
-<td>test local </td>
+<td>ref test local </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setupTinyurlstub</td>
+<td>setupTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
