--- a/test-output/old/Custom suite/methods-alphabetical.html
+++ b/test-output/old/Custom suite/methods-alphabetical.html
@@ -1,24 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Custom suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79caec">  <td>16/09/08 16:58:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VisualIVRTestSuite.HappyPathEndtoEndScenario(java.lang.String)[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">HappyPathEndtoEndScenario</td> 
-  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="79caec">  <td>16/09/08 16:58:59</td>   <td>1920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VisualIVRTestSuite.HappyPathEndtoEndScenario(java.lang.String)[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">HappyPathEndtoEndScenario</td> 
-  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="717fa4">  <td>16/09/08 16:58:56</td>   <td>-1316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;handleTestMethodName</td> 
-<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="717fa4">  <td>16/09/08 16:58:59</td>   <td>1903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;handleTestMethodName</td> 
-<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="717fa4">  <td>16/09/08 16:58:56</td>   <td>-1321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.setup()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="79caec">  <td>16/09/08 16:58:56</td>   <td>-1316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VisualIVRTestSuite.setupTinyurlstub()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;setupTinyurlstub</td> 
-<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="79caec">  <td>16/09/08 16:58:59</td>   <td>1903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VisualIVRTestSuite.setupTinyurlstub()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&gt;&gt;setupTinyurlstub</td> 
-<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="79caec">  <td>16/09/08 16:58:59</td>   <td>1793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VisualIVRTestSuite.tearDown()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="79caec">  <td>16/09/08 16:59:00</td>   <td>2209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VisualIVRTestSuite.tearDown()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="717fa4">  <td>16/09/08 16:59:00</td>   <td>2211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestScript.teardown()[pri:0, instance:TestSuite.VisualIVRTestSuite@4ec6a292]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="75cab9">  <td>16/09/19 09:12:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationAssetTestSuite.CreatePUSHNOTIFICATIONasset(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">CreatePUSHNOTIFICATIONasset</td> 
+  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="75cab9">  <td>16/09/19 09:12:52</td>   <td>2356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationAssetTestSuite.CreatePUSHNOTIFICATIONasset(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">CreatePUSHNOTIFICATIONasset</td> 
+  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/19 09:12:49</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">&gt;&gt;handleTestMethodName</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/19 09:12:52</td>   <td>2356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">&gt;&gt;handleTestMethodName</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/19 09:12:49</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.setup()[pri:0, instance:TestSuite.O2OPENAssetTestSuite@ea4a92b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="75cab9">  <td>16/09/19 09:12:49</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PushNotificationAssetTestSuite.setupTest()[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="75cab9">  <td>16/09/19 09:12:52</td>   <td>2356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PushNotificationAssetTestSuite.setupTest()[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="79caec">  <td>16/09/19 09:12:52</td>   <td>2823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestScript.teardown()[pri:0, instance:TestSuite.O2OPENAssetTestSuite@ea4a92b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
 </table>
