--- a/test-output/old/Custom suite/classes.html
+++ b/test-output/old/Custom suite/classes.html
@@ -4,20 +4,20 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestSuite.PushNotificationAssetTestSuite</td>
+<td>TestSuite.VisualIVRTestSuite</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>DeletePUSHNOTIFICATIONasset</td>
-<td>&nbsp;</td></tr>
+<td>HappyPathEndtoEndScenario</td>
+<td>ref </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreatePUSHNOTIFICATIONasset</td>
-<td>test </td>
-</tr>
+<td>CreateTokenforVerifiedCustomer</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -29,10 +29,6 @@
 <td>handleTestMethodName</td>
 <td>ref test local </td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>setupTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
