--- a/test-output/old/Custom suite/groups.html
+++ b/test-output/old/Custom suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>test</td><td>PushNotificationAssetTestSuite.CreatePUSHNOTIFICATIONasset(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>ref</td><td>VisualIVRTestSuite.HappyPathEndtoEndScenario(java.lang.String, java.lang.String)[pri:0, instance:TestSuite.VisualIVRTestSuite@5a39699c]<br/></td></tr>
 </table>
