--- a/test-output/old/Custom suite/methods-alphabetical.html
+++ b/test-output/old/Custom suite/methods-alphabetical.html
@@ -1,20 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Custom suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75cab9">  <td>16/09/19 09:12:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationAssetTestSuite.CreatePUSHNOTIFICATIONasset(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">CreatePUSHNOTIFICATIONasset</td> 
-  <td>main@1025799482</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>16/09/19 09:12:52</td>   <td>2356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationAssetTestSuite.CreatePUSHNOTIFICATIONasset(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">CreatePUSHNOTIFICATIONasset</td> 
-  <td>main@1025799482</td>   <td></td> </tr>
-<tr bgcolor="79caec">  <td>16/09/19 09:12:49</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">&gt;&gt;handleTestMethodName</td> 
-<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
-<tr bgcolor="79caec">  <td>16/09/19 09:12:52</td>   <td>2356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">&gt;&gt;handleTestMethodName</td> 
-<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
-<tr bgcolor="79caec">  <td>16/09/19 09:12:49</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.setup()[pri:0, instance:TestSuite.O2OPENAssetTestSuite@ea4a92b]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>16/09/19 09:12:49</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PushNotificationAssetTestSuite.setupTest()[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>16/09/19 09:12:52</td>   <td>2356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PushNotificationAssetTestSuite.setupTest()[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@35bbe5e8]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
-<tr bgcolor="79caec">  <td>16/09/19 09:12:52</td>   <td>2823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestScript.teardown()[pri:0, instance:TestSuite.O2OPENAssetTestSuite@ea4a92b]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="70c169">  <td>16/09/20 09:10:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VisualIVRTestSuite.HappyPathEndtoEndScenario(java.lang.String, java.lang.String)[pri:0, instance:TestSuite.VisualIVRTestSuite@5a39699c]">HappyPathEndtoEndScenario</td> 
+  <td>main@1908316405</td>   <td></td> </tr>
+<tr bgcolor="febc6f">  <td>16/09/20 09:10:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.VisualIVRTestSuite@5a39699c]">&gt;&gt;handleTestMethodName</td> 
+<td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
+<tr bgcolor="febc6f">  <td>16/09/20 09:10:14</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.setup()[pri:0, instance:TestFrameWork.BaseTestScript@7e0babb1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
+<tr bgcolor="febc6f">  <td>16/09/20 09:10:26</td>   <td>12372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestScript.teardown()[pri:0, instance:TestFrameWork.BaseTestScript@7e0babb1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
 </table>
