--- a/test-output/old/Custom suite/methods-not-run.html
+++ b/test-output/old/Custom suite/methods-not-run.html
@@ -1,11 +1,12 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>TestSuite.TestScriptAsset.testGetPAYMAssetsUsingPathParam</td></tr>
-<tr><td>TestSuite.VisualIVRTestSuite.CreateTokenforVerifiedCustomer</td></tr>
 <tr><td>TestSuite.TestScriptAsset.testGetAllAssets</td></tr>
+<tr><td>TestSuite.VisualIVRTestSuite.CreateTokenforVerifiedCustomer</td></tr>
 <tr><td>TestSuite.O2OPENAssetTestSuite.DeleteO2OPENasset</td></tr>
 <tr><td>TestSuite.O2OPENAssetTestSuite.CreateO2OPENasset</td></tr>
 <tr><td>TestSuite.PushNotificationAssetTestSuite.DeletePUSHNOTIFICATIONasset</td></tr>
+<tr><td>TestSuite.PushNotificationAssetTestSuite.OneAssetPerIdentityRuleForPUSHNOTIFICATIONasset</td></tr>
 <tr><td>SampleTestWithTestNG.testLogin</td></tr>
-<tr><td>TestSuite.VisualIVRTestSuite.HappyPathEndtoEndScenario</td></tr>
+<tr><td>TestSuite.PushNotificationAssetTestSuite.CreatePUSHNOTIFICATIONasset</td></tr>
 <tr><td>TestSuite.TestScriptLogin.SuccessfulLogin</td></tr>
 </table>
