[ns] updated the scripts to support ref execution

--- a/test-output/old/Custom suite/classes.html
+++ b/test-output/old/Custom suite/classes.html
@@ -4,6 +4,48 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>TestSuite.PushNotificationAssetTestSuite</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>OneAssetPerIdentityRuleForPUSHNOTIFICATIONasset</td>
+<td>ref </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>DirectDeletePUSHNOTIFICATIONasset</td>
+<td>ref </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CreatePUSHNOTIFICATIONasset</td>
+<td>ref </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>handleTestMethodName</td>
+<td>ref test local </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setupTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>TestSuite.VisualIVRTestSuite</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
