--- a/test-output/old/Custom suite/methods.html
+++ b/test-output/old/Custom suite/methods.html
@@ -1,12 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Custom suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="febc6f">  <td>16/09/20 09:10:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.setup()[pri:0, instance:TestFrameWork.BaseTestScript@7e0babb1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
-<tr bgcolor="febc6f">  <td>16/09/20 09:10:14</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.VisualIVRTestSuite@5a39699c]">&gt;&gt;handleTestMethodName</td> 
-<td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
-<tr bgcolor="70c169">  <td>16/09/20 09:10:14</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VisualIVRTestSuite.HappyPathEndtoEndScenario(java.lang.String, java.lang.String)[pri:0, instance:TestSuite.VisualIVRTestSuite@5a39699c]">HappyPathEndtoEndScenario</td> 
-  <td>main@1908316405</td>   <td></td> </tr>
-<tr bgcolor="febc6f">  <td>16/09/20 09:10:26</td>   <td>12376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestScript.teardown()[pri:0, instance:TestFrameWork.BaseTestScript@7e0babb1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
+<tr bgcolor="71cca7">  <td>16/09/20 11:53:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.setup()[pri:0, instance:TestSuite.TestScriptAsset@47f37ef1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="71cca7">  <td>16/09/20 11:53:00</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@2ff4f00f]">&gt;&gt;handleTestMethodName</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/20 11:53:00</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PushNotificationAssetTestSuite.setupTest()[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@2ff4f00f]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/20 11:53:00</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationAssetTestSuite.CreatePUSHNOTIFICATIONasset(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@2ff4f00f]">CreatePUSHNOTIFICATIONasset</td> 
+  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="71cca7">  <td>16/09/20 11:53:04</td>   <td>3665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@2ff4f00f]">&gt;&gt;handleTestMethodName</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/20 11:53:04</td>   <td>3665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PushNotificationAssetTestSuite.setupTest()[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@2ff4f00f]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/20 11:53:04</td>   <td>3665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationAssetTestSuite.DirectDeletePUSHNOTIFICATIONasset(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@2ff4f00f]">DirectDeletePUSHNOTIFICATIONasset</td> 
+  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="71cca7">  <td>16/09/20 11:53:05</td>   <td>4898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@2ff4f00f]">&gt;&gt;handleTestMethodName</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/20 11:53:05</td>   <td>4898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PushNotificationAssetTestSuite.setupTest()[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@2ff4f00f]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="717fa4">  <td>16/09/20 11:53:05</td>   <td>4898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationAssetTestSuite.OneAssetPerIdentityRuleForPUSHNOTIFICATIONasset(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestSuite.PushNotificationAssetTestSuite@2ff4f00f]">OneAssetPerIdentityRuleForPUSHNOTIFICATIONasset</td> 
+  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="71cca7">  <td>16/09/20 11:53:06</td>   <td>5687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestScript.handleTestMethodName(java.lang.reflect.Method)[pri:0, instance:TestSuite.VisualIVRTestSuite@7d417077]">&gt;&gt;handleTestMethodName</td> 
+<td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="6369c4">  <td>16/09/20 11:53:06</td>   <td>5687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VisualIVRTestSuite.HappyPathEndtoEndScenario(java.lang.String, java.lang.String)[pri:0, instance:TestSuite.VisualIVRTestSuite@7d417077]">HappyPathEndtoEndScenario</td> 
+  <td>main@1025799482</td>   <td></td> </tr>
+<tr bgcolor="71cca7">  <td>16/09/20 11:53:08</td>   <td>7747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestScript.teardown()[pri:0, instance:TestSuite.TestScriptAsset@47f37ef1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1025799482</td>   <td></td> </tr>
 </table>
